templates/frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-vite
  namespace: default
  labels:
    app: frontend-vite
spec:
  selector:
    matchLabels:
      app: frontend-vite
  replicas: 3
  template:
    metadata:
      labels:
        app: frontend-vite
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name: frontend-vite
          # Changed the image name
          image: varma1909/frontend_summarization:latest
          ports:
            - containerPort: 8000
