templates/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  selector:
    app: frontend-vite
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
  type: LoadBalancer
