templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: default
spec:
  selector:
    app: python-summarization-flask
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30000
  type: LoadBalancer
